--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.two"
     defaultConfig {
         applicationId "com.example.usman.youtubehashtag"
         minSdkVersion 17
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0"
+        versionName "one.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -27,17 +27,17 @@ repositories {
 }
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestCompile('com.android.support.test.espresso:espresso-core:two.two.two', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile files('libs/google-api-services-youtube-v3-rev137-1.20.0.jar')
-    compile 'com.etsy.android.grid:library:1.0.5'
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support:design:25.2.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
-    compile 'com.google.android.gms:play-services-maps:10.2.0'
-    compile 'com.riontech.staggeredtextgridview:staggeredtextgridview:1.0.1'
-    compile 'com.github.markushi:circlebutton:1.1'
+    compile files('libs/google-api-services-youtube-v3-rev137-one.20.0.jar')
+    compile 'com.etsy.android.grid:library:one.0.5'
+    compile 'com.android.support:appcompat-v7:25.two.0'
+    compile 'com.android.support:design:25.two.0'
+    compile 'com.android.support.constraint:constraint-layout:one.0.0-beta5'
+    compile 'com.google.android.gms:play-services-maps:10.two.0'
+    compile 'com.riontech.staggeredtextgridview:staggeredtextgridview:one.0.one'
+    compile 'com.github.markushi:circlebutton:one.one'
 
     testCompile 'junit:junit:4.12'
 
