--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.two"
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.example.usman.youtubehashtag"
         minSdkVersion 17
