--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 
+def youtubeapikey = '"' + Youtube_api_key + '"' ?: '"Define Your youtube api key"';
+
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -11,6 +14,7 @@ android {
         versionCode 1
         versionName "one.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        buildConfigField "String" , "API_KEY" ,  youtubeapikey
     }
     buildTypes {
         release {
@@ -27,17 +31,17 @@ repositories {
 }
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:two.two.two', {
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile files('libs/google-api-services-youtube-v3-rev137-one.20.0.jar')
-    compile 'com.etsy.android.grid:library:one.0.5'
-    compile 'com.android.support:appcompat-v7:25.two.0'
-    compile 'com.android.support:design:25.two.0'
-    compile 'com.android.support.constraint:constraint-layout:one.0.0-beta5'
-    compile 'com.google.android.gms:play-services-maps:10.two.0'
-    compile 'com.riontech.staggeredtextgridview:staggeredtextgridview:one.0.one'
-    compile 'com.github.markushi:circlebutton:one.one'
+    compile files('libs/google-api-services-youtube-v3-rev137-1.20.0.jar')
+    compile 'com.etsy.android.grid:library:1.0.5'
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
+    compile 'com.google.android.gms:play-services-maps:10.2.0'
+    compile 'com.riontech.staggeredtextgridview:staggeredtextgridview:1.0.1'
+    compile 'com.github.markushi:circlebutton:1.1'
 
     testCompile 'junit:junit:4.12'
 
